# airbyte-api-python-sdk

./: .genignore  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README-PYPI.md  README.md  RELEASES.md  USAGE.md  airbyte-api.openapi.yaml  files.gen  gen.yaml  openapi.yaml  poe_tasks.toml  pylintrc  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/speakeasy/: dummy-compose.yml
.github/workflows/: generate-command.yml  pre-release-command.yml  publish.yml  release-drafter.yml  semantic-pr-title.yml  slash-command-dispatch.yml  speakeasy_openapi_maintenance.yml  speakeasy_sdk_generation.yml  speakeasy_sdk_publish.yml  test-full.yml
.speakeasy/: workflow.yaml
docs/airbyte/: README.md
docs/api/: canceljobresponse.md  createconnectionresponse.md  createdeclarativesourcedefinitionrequest.md  createdeclarativesourcedefinitionresponse.md  createdestinationdefinitionrequest.md  createdestinationdefinitionresponse.md  createdestinationresponse.md  createjobresponse.md  createorupdateorganizationoauthcredentialsrequest.md  createorupdateorganizationoauthcredentialsresponse.md  createorupdateworkspaceoauthcredentialsrequest.md  createorupdateworkspaceoauthcredentialsresponse.md  createpermissionresponse.md  createsourcedefinitionrequest.md  createsourcedefinitionresponse.md  createsourceresponse.md  createtagresponse.md  createworkspaceresponse.md  deleteconnectionresponse.md  deletedeclarativesourcedefinitionrequest.md  deletedeclarativesourcedefinitionresponse.md  deletedestinationdefinitionrequest.md  deletedestinationdefinitionresponse.md  deletedestinationrequest.md  deletedestinationresponse.md  deleteorganizationoauthcredentialsrequest.md  deleteorganizationoauthcredentialsresponse.md  deletepermissionrequest.md  deletepermissionresponse.md  deletesourcedefinitionrequest.md  deletesourcedefinitionresponse.md  deletesourceresponse.md  deletetagrequest.md  deletetagresponse.md  deleteworkspaceoauthcredentialsrequest.md  deleteworkspaceoauthcredentialsresponse.md  deleteworkspaceresponse.md  getconnectionresponse.md  getdeclarativesourcedefinitionrequest.md  getdeclarativesourcedefinitionresponse.md  (+66 more)
docs/connections/: README.md
docs/destinations/: README.md
docs/jobs/: README.md
docs/models/: accesstoken.md  accesstokenisrequiredforauthenticationrequests.md  accountname.md  accountnames.md  actionbreakdownvalidactionbreakdowns.md  actionreporttime.md  activecampaign.md  actortypeenum.md  acuityscheduling.md  adanalyticsreportconfiguration.md  adobecommercemagento.md  agilecrm.md  (+5188 more)
overlays/: python_speakeasy.yaml
scripts/: post_generate.py  post_generate.uv  prepare_readme.py
(+4855 files in other folders)
