
[project]
name = "airbyte-api"
version = "1.0.0"
description = "Python Client SDK for Airbyte API"
authors = [{ name = "Speakeasy" },]
readme = "README-PYPI.md"
requires-python = ">=3.10"
dependencies = [
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
]

[tool.poetry]
repository = "https://github.com/airbytehq/airbyte-api-python-sdk.git"
packages = [
    { include = "airbyte_api", from = "src" }
]
include = ["py.typed", "src/airbyte_api/py.typed"]

[tool.setuptools.package-data]
"*" = ["py.typed", "src/airbyte_api/py.typed"]

[virtualenvs]
in-project = true

[tool.poetry.group.dev.dependencies]
mypy = "==1.15.0"
pylint = "==3.2.3"
pyright = "==1.1.398"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


